Change Null Check to Optional class